Fix page jump on button hover.

--- a/assets/stylesheets/components/_posts-and-pages.scss
+++ b/assets/stylesheets/components/_posts-and-pages.scss
@@ -1,12 +1,8 @@
 .entry-content {
 	margin: 0 0 1.5em;
 
-	a:not(.button) {
-		border-bottom: 0;
-
-		&:hover {
-			border-bottom: 2px solid;
-		}
+	a:not(.button):hover {
+		border-bottom: 2px solid;
 	}
 }
 
