--- a/style.css
+++ b/style.css
@@ -4118,10 +4118,8 @@ blockquote .pique-template-recent-posts .pique-panel-content cite a,
 
 .entry-content {
   margin: 0 0 1.5em; }
-  .entry-content a:not(.button) {
-    border-bottom: 0; }
-    .entry-content a:not(.button):hover {
-      border-bottom: 2px solid; }
+  .entry-content a:not(.button):hover {
+    border-bottom: 2px solid; }
 
 /* Sticky posts */
 .sticky .entry-title::before {
